--- a/less/navigation.less
+++ b/less/navigation.less
@@ -8,7 +8,7 @@ header {
     .navbar{
         display:flex;
         width: 100%;
-        margin: 2% auto;
+        margin: 0 auto;
         align-items: baseline;
         max-width: 800px;
 
